--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-# ignore mac specific temporary files
-.DS_store
+# Ignore everything in the repository
+*
+
+# But DO NOT ignore directories, so we can recurse into them
+!*/
+
+# Now, whitelist the files formats to track
+!*.R
+!*.Rmd
+!*.rmd
+!*.Qmd
+!*.qmd
+!*.sh
+!*.md
+
+# And track .gitignore
+!.gitignore
+
+# ignore Macintosh's .DS_Store
 .DS_Store
 
